--- a/SOC/soc-import/boost/soc/2006/misc/trunk/libs/bimap/doc/style/template/index.html
+++ b/SOC/soc-import/boost/soc/2006/misc/trunk/libs/bimap/doc/style/template/index.html
@@ -34,14 +34,22 @@
 <div class="toc-main">
 <table border="0" cellspacing="0" cellpadding="0" align="center">
     <tr><td><img border="0" src="images/bimap/boost.bimap.logo.png" alt="Bimap Logo"></td></tr>
+
     <tr><td><a accesskey="i" href="boost_bimap/introduction.html"><img border=0 margin=0 src="images/toc/introduction.png" alt="Introduction"></a></td></tr>
-    <tr><td><a accesskey="o" href="boost_bimap/one_minute_tutorial.html"><img border=0 margin=0 src="images/toc/quicktutorial.png" alt="One minute tutorial"></a></td></tr>
-    <tr><td><a accesskey="t" href="boost_bimap/the_tutorial.html"><img border=0 src="images/toc/tutorial.png" alt="The tutorial"></a></td></tr>
+    <tr><td><a accesskey="o" href="boost_bimap/one_minute_tutorial.html"><img border=0 margin=0 src="images/toc/one_minute_tutorial.png" alt="One minute tutorial"></a></td></tr>
+    <tr><td><a accesskey="t" href="boost_bimap/the_tutorial.html"><img border=0 src="images/toc/the_tutorial.png" alt="The tutorial"></a></td></tr>
+    <tr><td><a accesskey="b" href="boost_bimap/bimap_and_boost.html"><img border=0 src="images/toc/bimap_and_boost.png" alt="Bimap and Boost"></a></td></tr>
+    <tr><td><a accesskey="r" href="boost_bimap/reference.html"><img border=0 src="images/toc/reference.png" alt="Reference"></a></td></tr>
+    <tr><td><a accesskey="c" href="boost_bimap/compiler_specifics.html"><img border=0 src="images/toc/compiler_specifics.png" alt="Compiler specifics"></a></td></tr>
+    <tr><td><a accesskey="p" href="boost_bimap/performance.html"><img border=0 src="images/toc/performance.png" alt="Performance"></a></td></tr>
     <tr><td><a accesskey="e" href="boost_bimap/examples.html"><img border=0 src="images/toc/examples.png" alt="Examples"></a></td></tr>
-    <tr><td><a accesskey="r" href="doxydoc/index.html"><img border=0 src="images/toc/reference.png" alt="Reference"></a></td></tr>
+    <tr><td><a accesskey="e" href="boost_bimap/test_suite.html"><img border=0 src="images/toc/test_suite.png" alt="Test Suite"></a></td></tr>
+    <tr><td><a accesskey="f" href="boost_bimap/future_work.html"><img border=0 src="images/toc/future_work.png" alt="Future work"></a></td></tr>
+    <tr><td><a accesskey="n" href="boost_bimap/release_notes.html"><img border=0 src="images/toc/release_notes.png" alt="Release notes"></a></td></tr>
     <tr><td><a accesskey="w" href="boost_bimap/rationale.html"><img border=0 src="images/toc/rationale.png" alt="Rationale"></a></td></tr>
     <tr><td><a accesskey="h" href="boost_bimap/history.html"><img border=0 src="images/toc/history.png" alt="History"></a></td></tr>
-    <tr><td><a accesskey="a" href="boost_bimap/acknowledgments.html"><img border=0 src="images/toc/acknowledgments.png" alt="Acknowlegments"></a></td></tr>
+    <tr><td><a accesskey="a" href="boost_bimap/acknowledgements.html"><img border=0 src="images/toc/acknowledgements.png" alt="Acknowlegments"></a></td></tr>
+
 </table>
 </div>
 <div class="section" lang="en">
@@ -50,11 +58,10 @@
 <a name="bimap.preface"></a><a href="index.html#bimap.preface" title="Preface">Disclaimer</a></h2></div></div></div>
 <a name="bimap.preface.disclaimer"></a><h3>
 <a name="id2587792"></a>
-      <a href="index.html#bimap.preface.disclaimer">Disclaimer</a>
     </h3>
 <p>
       Boost.Bimap is not yet a boost library. It is being developed by Matias Capeletto
-      with the mentoring of Joaquin Lopez muñoz in the context of the Google SoC
+      with the mentoring of Joaqu&iacute;n M L&oacute;pez Mu&ntilde;oz in the context of the Google SoC
       2006.<br>
     </p>
 </div>
@@ -64,6 +71,6 @@
 <td align="right"><small></small></td>
 </tr></table>
 <hr>
-<div class="spirit-nav"><a accesskey="n" href="bimap/introduction.html"><img src="images/next.png" alt="Next"></a></div>
+<div class="spirit-nav"><a accesskey="n" href="boost_bimap/introduction.html"><img src="images/next.png" alt="Next"></a></div>
 </body>
 </html>
