--- a/SOC/soc-import/boost/soc/2006/misc/trunk/libs/bimap/doc/style/template/index.html
+++ b/SOC/soc-import/boost/soc/2006/misc/trunk/libs/bimap/doc/style/template/index.html
@@ -28,8 +28,23 @@
 <div><p class="copyright">Copyright  2006 Matias Capeletto</p></div>
 <div><div class="legalnotice">
 <a name="id2587752"></a><p>
-        Distributed under the Boost Software License, Version 1.0. (See accompanying
-        file LICENSE_1_0.txt or copy at <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
+        This code may be used under either of the following two licences:<br>
+        <br> Permission is hereby granted, free of charge, to any person obtaining
+        a copy of this software and associated documentation files (the "Software"),
+        to deal in the Software without restriction, including without limitation
+        the rights to use, copy, modify, merge, publish, distribute, sublicense,
+        and/or sell copies of the Software, and to permit persons to whom the Software
+        is furnished to do so, subject to the following conditions:<br> The above
+        copyright notice and this permission notice shall be included in all copies
+        or substantial portions of the Software.<br> THE SOFTWARE IS PROVIDED "AS
+        IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
+        NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR
+        PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
+        BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+        OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH
+        THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. OF SUCH DAMAGE.<br>
+        <br> Or:<br> <br> Distributed under the Boost Software License, Version
+        1.0. (See accompanying file LICENSE_1_0.txt or copy at <a href="http://www.boost.org/LICENSE_1_0.txt" target="_top">http://www.boost.org/LICENSE_1_0.txt</a>)
       </p>
 <div class="toc-main">
 <table border="0" cellspacing="0" cellpadding="0" align="center">
@@ -60,14 +75,14 @@
 <a name="id2587792"></a>
     </h3>
 <p>
-      Boost.Bimap is not yet a boost library. It is being developed by Matias Capeletto
+      Boost.Bimap is not yet a boost library. It has been developed by Matias Capeletto
       with the mentoring of Joaqu&iacute;n M L&oacute;pez Mu&ntilde;oz in the context of the Google SoC
       2006.<br>
     </p>
 </div>
 </div>
 <table width="100%"><tr>
-<td align="left"><small><p>Last revised: July 04, 2006 at 05:27:12 GMT</p></small></td>
+<td align="left"><small><p>Last revised: August 18, 2006 at 05:27:12 GMT</p></small></td>
 <td align="right"><small></small></td>
 </tr></table>
 <hr>
