--- a/doc_test/box_wrapper/xhtml/boostbook.css
+++ b/doc_test/box_wrapper/xhtml/boostbook.css
@@ -1,808 +1,1 @@
-/*=============================================================================
-    Copyright (c) 2004-2006 Joel de Guzman,  http://spirit.sourceforge.net/
-    Copyright (c) 2006-2007 Matias Capeletto
-
-    Use, modification and distribution is subject to the Boost Software
-    License, Version 1.0. (See accompanying file LICENSE_1_0.txt or copy at
-    http://www.boost.org/LICENSE_1_0.txt)
-=============================================================================*/
-
-/*============================================================================
-    misc
-=============================================================================*/
-
-    .clear
-    {
-        clear : both;
-        width : 100%;
-        height : 1px;
-        overflow : hidden;
-    }
-
-/*=============================================================================
-    Body defaults
-=============================================================================*/
-
-    body
-    {
-        /*--- background : url(images/header-fg.png) no-repeat top left;*/
-        /*--- margin: 1em;*/
-        font-family: sans-serif;
-        /*--- clear : both;*/
-        /*--- border : none;*/
-        min-width : 43em;
-        /*+++ font-size : smaller;*/
-        margin: 0;
-    }
-
-    #body {
-        clear : both;
-        border : none;
-        width : 100%;
-        background : #ffffff;
-    }
-
-    #content {
-        margin: 1em;
-        clear : both;
-        border : none;
-    }
-
-/*============================================================================
-    Page Heading
-=============================================================================*/
-
-    #heading
-    {
-        color : black;
-        height : 100px;
-        background : url(images/header-fg.png) no-repeat top left;
-        border-bottom : solid 1px;
-    }
-
-    .heading_logo
-    {
-        text-align: left;
-        border: none;
-    }
-
-    .heading_search_box
-    {
-        text-align: right;
-        padding-bottom: 10px;
-        padding-right: 10px;
-        height: 40px;
-        color: white;
-        font-weight: bold;
-    }
-
-    input.search_box
-    {
-        background-color: #BEDEBA;
-        font-weight: bold;
-        font-size: 12px;
-        color: #006D00;
-        border: 1px solid #DCDCDC;
-        border-bottom: 1px solid #9D9D9D;
-        border-right: 1px solid #9D9D9D;
-        padding-bottom: 3px;
-        padding-left: 3px;
-    }
-
-    .heading_navigation_box
-    {
-        text-align: right;
-        padding-top: 10px;
-        padding-right: 10px;
-        height: 40px;
-    }
-
-    div.grouped_links
-    {
-        display: inline;
-    }
-
-/*=============================================================================
-    Grouped Links
-=============================================================================*/
-
-    select.grouped_links
-    {
-        background-color: #BEDEBA;
-        font-weight: bold;
-        font-size: 12px;
-        color: #006D00;
-        border: 1px solid #DCDCDC;
-        border-bottom: 1px solid #9D9D9D;
-        border-right: 1px solid #9D9D9D;
-        padding-bottom: 1px;
-        padding-right: 1px;
-    }
-
-    option.grouped_links_title
-    {
-        background-color: #BEDEBA;
-        font-weight: bold;
-        font-size: 12px;
-        color: #006D00;
-    }
-
-    option.grouped_links_group
-    {
-        background-color: #008000;
-        font-weight: bold;
-        font-size: 12px;
-        color:   white;
-    }
-
-    option.grouped_links_item
-    {
-        background-color: #FAFFFB;
-        padding: 0px 0px 0px 12px;
-        color: #006D00;
-        font-weight: normal;
-    }
-
-
-/*=============================================================================
-    Footer
-=============================================================================*/
-
-    #footer {
-        color: #666666;
-        margin: 1.5em;
-        padding: 0em;
-        clear: both;
-        background: #FFFFFF url(images/footer-bg.png) repeat-x top left;
-        border: none;
-    }
-
-    #footer-left {
-        float: left;
-        padding: 0.65em;
-        min-height: 100px;
-        background: url(images/footer-bg-left.png) no-repeat top left;
-    }
-
-    #footer-right {
-        float: right;
-        padding: 0.65em;
-        min-height: 100px;
-        background: url(images/footer-bg-right.png) no-repeat top right;
-    }
-
-    #footer p {
-        margin: 0em;
-        padding: 0em;
-        font-size: 75%;
-        text-align: left;
-    }
-
-    #footer #banners p {
-        float: left;
-        margin: 0em 0em 0em 1em;
-    }
-
-    #footer #banners a {
-        display: block;
-    }
-
-    #footer #banner-sourceforge {
-        background: url(http://sourceforge.net/sflogo.php?group_id=7586&type=1) no-repeat fixed 0px 5em;
-    }
-
-
-
-/*=============================================================================
-    Paragraphs
-=============================================================================*/
-
-    p 
-    {
-        text-align: left;
-        font-size: 10pt; 
-        line-height: 1.15;
-    }
-
-
-/*=============================================================================
-    Spirit style navigation
-=============================================================================*/
-
-    .spirit-nav
-    {
-        text-align: right;
-        margin: 16px;
-    }
-
-    .spirit-nav a
-    {
-        color: white;
-        padding-left: 0.5em;
-    }
-
-    .spirit-nav img
-    {
-        border-width: 0px;
-    }
-
-/*=============================================================================
-    Boxes
-=============================================================================*/
-
-    .box-outer-wrapper {
-        border: 2px solid #EAEEEB;/* #ECECEC;*/
-        border-bottom: none;
-        background-color: white; /*#FAFFFB;*/
-    }
-
-    .box-outer-wrapper:hover {
-        background-color: #FAFFFB; /*#FEFFF5;*/ /* blue #FBFBFF;*/ /* yellow #FFFFEC;*/ /* green#EDFFEC;*/
-    }
-
-
-    .box-top-left {
-        float: left;
-        margin-left: -2px;
-        margin-top: -2px;
-        min-height: 18px;
-        min-width: 18px;
-        background: url(images/blurb_top_left.png) no-repeat top left;
-    }
-    .box-top-right {
-        margin-right: -2px;
-        margin-top: -2px;
-        min-height: 18px;
-        min-width: 18px;
-        background: url(images/blurb_top_right.png) no-repeat top right;
-        float: right;
-    }
-    .box-inner-wrapper {
-        padding-top: 18px;
-        padding-left: 18px;
-    }
-    .box-bottom-left {
-        margin-left: -2px;
-        margin-bottom: -2px;
-        min-height: 28px;
-        min-width: 18px;
-        background: url(images/blurb_bottom_left.png) no-repeat bottom left;
-        float: left;
-    }
-    .box-bottom-right {
-        margin-right: -2px;
-        margin-bottom: -2px;
-        min-height: 28px;
-        min-width: 18px;
-        background: url(images/blurb_bottom_right.png) no-repeat bottom right;
-        float: right;
-    }
-
-    .box-bottom {
-        min-height: 28px;
-        background: url(images/blurb_bottom.png) repeat-x bottom;
-    }
-
-
-/*=============================================================================
-    Program listings
-=============================================================================*/
-
-    /* The box-wrapper in the program listings is place outside because the
-       "pre" tag is incompatible with it. */
-
-    /* Code on paragraphs */
-    p tt.computeroutput
-    {
-        font-size: 10pt;
-    }
-
-    .synopsis
-    {
-        font-size: 10pt;
-        margin: 1pc 4% 0pc 4%;
-    }
-
-    .programlisting,
-    .screen
-    {
-        font-size: 10pt;
-        display: block;
-        margin: 1pc 4% 0pc 4%;
-    }
-
-    .synopsis .box-inner-wrapper,
-    .programlisting .box-inner-wrapper,
-    .screen .box-inner-wrapper {
-        padding-top: 12px;
-        padding-left: 30px;
-        padding-bottom: 12px;
-    }
-
-    /* Program listings in tables don't get borders */
-    /*
-    td .programlisting,
-    td .box-outer-wrapper .programlisting ,
-    td .programlisting .box-top-left,
-    td .programlisting .box-top-right,
-    td .programlisting .box-top,
-    td .programlisting .box-bottom-left,
-    td .programlisting .box-bottom-right,
-    td .programlisting .box-bottom,
-    td .screen,
-    td .screen .box-outer-wrapper,
-    td .screen .box-top-left,
-    td .screen .box-top-right,
-    td .screen .box-top,
-    td .screen .box-bottom-left,
-    td .screen .box-bottom-right,
-    td .screen .box-bottom
-    {
-        margin: 0pc 0pc 0pc 0pc;
-        padding:  0pc 0pc 0pc 0pc;
-        background: none;
-        border: none;
-    }
-    */
-
-
-
-/*=============================================================================
-    Headings
-=============================================================================*/
-
-    h1, h2, h3, h4, h5, h6 
-    { 
-        text-align: left;
-        margin: 1em 0em 0.5em 0em;
-        font-weight: bold;
-    }
-
-    h1 { font: 140% }
-    h2 { font: bold 140% }
-    h3 { font: bold 130% }
-    h4 { font: bold 120% }
-    h5 { font: italic 110% }
-    h6 { font: italic 100% }
-
-    /* Top page titles */
-    title, 
-    h1.title, 
-    h2.title
-    h3.title, 
-    h4.title, 
-    h5.title, 
-    h6.title, 
-    .refentrytitle
-    {
-        font-weight: bold;
-        margin-bottom: 1pc;
-    }
-
-    h1.title { font-size: 140% }
-    h2.title { font-size: 140% }
-    h3.title { font-size: 130% }
-    h4.title { font-size: 120% }
-    h5.title { font-size: 110% }
-    h6.title { font-size: 100% }
-
-    .section h1 
-    {
-        margin: 0em 0em 0.5em 0em;
-        font-size: 140%;
-    }
-
-    .section h2 { font-size: 140% }
-    .section h3 { font-size: 130% }
-    .section h4 { font-size: 120% }
-    .section h5 { font-size: 110% }
-    .section h6 { font-size: 100% }
-
-    /* Code on titles */
-    h1 tt.computeroutput { font-size: 140% }
-    h2 tt.computeroutput { font-size: 140% }
-    h3 tt.computeroutput { font-size: 130% }
-    h4 tt.computeroutput { font-size: 120% }
-    h5 tt.computeroutput { font-size: 110% }
-    h6 tt.computeroutput { font-size: 100% }
-
-/*=============================================================================
-    Author
-=============================================================================*/
-
-    h3.author 
-    { 
-        font-size: 100% 
-    }
-
-/*=============================================================================
-    Lists
-=============================================================================*/
-
-    li
-    {
-        font-size: 10pt;
-        line-height: 1.3;
-    }
-
-    /* Unordered lists */
-    ul 
-    {
-        text-align: left;
-    }
-
-    /* Ordered lists */
-    ol 
-    {
-        text-align: left;
-    }
-
-    .ol_1 { list-style-type: decimal; }
-    .ol_a { list-style-type: lower-alpha; }
-    .ol_i { list-style-type: lower-roman; }
-    .ol_A { list-style-type: upper-alpha; }
-    .ol_I { list-style-type: upper-roman; }
-
-
-/*=============================================================================
-    Links
-=============================================================================*/
-
-    a
-    {
-        text-decoration: none; /* no underline */
-        border: none;
-    }
-
-    a:hover
-    {
-        text-decoration: underline;
-        border: none;
-    }
-
-
-
-/*=============================================================================
-    Table of contents
-=============================================================================*/
-
-    .toc
-    {
-       margin: 1pc 4% 0pc 4%;
-       font-size: 10pt;
-       line-height: 1.15;
-    }
-
-    div.toc div.box-inner-wrapper
-    {
-        padding-left: 36px;
-    }
-
-/*=============================================================================
-    Tables
-=============================================================================*/
-
-    .table-title, 
-    div.table p.title
-    {
-        margin-left: 4%;
-        padding-right: 0.5em; 
-        padding-left: 0.5em;
-        margin-top: 25px;
-    }
-
-    .informaltable table, 
-    .table table
-    {
-        width: 92%;
-        margin-left: 4%;
-        margin-right: 4%;
-    }
-
-    /* Table Cells */
-
-    div.informaltable table tr th,
-    div.table table tr th
-    {
-        margin: 2px;
-        margin-bottom: 8px;
-        padding: 0.5em;
-        padding-top: 10px;
-        padding-bottom: 0px;
-        background-color: #F8F8F8;
-        border: 1px solid #ECECEC;
-    }
-
-    div.informaltable table tr th p,
-    div.table table tr th p
-    {
-        font-size: 10pt;
-        text-align: center;
-        line-height: 1.2;
-        margin: 0;
-        padding: 0;
-        padding-bottom: 10px;
-    }
-
-    div.informaltable table tr td,
-    div.table table tr td
-    {
-        margin: 2px;
-        padding: 0.5em;
-        padding-top: 10px;
-        padding-bottom: 0px;
-        background-color: white;
-        border: 1px solid #ECECEC;
-    }
-
-    div.informaltable table tr td p,
-    div.table table tr td p
-    {
-        text-align: left;
-        font-size: 10pt;
-        line-height: 1.2;
-        margin: 0;
-        padding: 0;
-        padding-bottom: 10px;
-    }
-
-    div.informaltable :hover table tr th,
-    div.table :hover table tr th
-    {
-        background-color: #E3F9E4;
-    }
-
-    div.informaltable :hover table tr td,
-    div.table :hover table tr td
-    {
-        background-color: #FAFFFB;
-    }
-
-/*=============================================================================
-    Blurbs
-=============================================================================*/
-
-    div.note,
-    div.tip,
-    div.important,
-    div.caution,
-    div.warning,
-    div.sidebar
-    {
-        font-size: 10pt;
-        line-height: 1.2;
-        display: block;
-        margin: 1pc 4% 0pc 4%;
-    }
-
-    div.sidebar div.box-inner-wrapper
-    {
-        padding-top: 10pt;
-        padding-left: 28pt;
-    }
-
-    div.sidebar div.box-inner-wrapper img
-    {
-        padding: 1pt;
-    }
-
-    div.admonition-body {
-        padding-left: 70px;
-    }
-
-    div.admonition-graphic {
-        float: left;
-        display: inline;
-        min-width: 50px;
-    }
-
-    div.admonition-title {
-        font-weight: bold;
-    }
-
-    div.admonition-content {
-
-    }
-
-/*=============================================================================
-    Callouts
-=============================================================================*/
-
-    .calloutlist
-    {
-        padding-left: 75px;
-        padding-bottom: 10px;
-    }
-
-    .line_callout_bug img
-    {
-        float: left;
-        position:relative;
-        left: -18px;
-        top: -12px;
-        clear: left;
-        margin-left:-22px;
-        border: none;
-    }
-
-    .callout_bug a img
-    {
-        border: none;
-    }
-
-    .calloutlist dl dt a img
-    {
-        float: left;
-        border: none;
-    }
-
-/*=============================================================================
-    Variable Lists
-=============================================================================*/
-
-    /* Make the terms in definition lists bold */
-    div.variablelist dl dt,
-    span.term
-    {
-        font-weight: bold;
-        font-size: 10pt;
-    }
-
-    div.variablelist table tbody tr td
-    {
-        text-align: left;
-        vertical-align: top;
-        padding: 0em 2em 0em 0em;
-        font-size: 10pt;
-        margin: 0em 0em 0.5em 0em;
-        line-height: 1;
-    }
-
-    /* Make the terms in definition lists bold */
-    div.variablelist dl dt
-    {
-        margin-bottom: 0.2em;
-    }
-
-    div.variablelist dl dd
-    {
-        margin: 0em 0em 0.5em 2em;
-        font-size: 10pt;
-    }
-
-    div.variablelist table tbody tr td p
-    div.variablelist dl dd p
-    {
-        margin: 0em 0em 0.5em 0em;
-        line-height: 1;
-    }
-
-/*=============================================================================
-    Misc
-=============================================================================*/
-
-    /* Title of books and articles in bibliographies */
-    span.title
-    {
-        font-style: italic;
-    }
-
-    span.underline
-    {
-        text-decoration: underline;
-    }
-
-    span.strikethrough
-    {
-        text-decoration: line-through;
-    }
-
-    /* Copyright, Legal Notice */
-    div div.legalnotice p
-    {
-        text-align: left
-    }
-
-
-
-/*=============================================================================
-    Colors
-=============================================================================*/
-
-    @media screen
-    {
-        /* Links */
-        a
-        {
-            color: #0C7445;
-            border: none;
-        }
-
-        a:visited
-        {
-            color: #663974;
-            border: none;
-        }
-
-        h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
-        h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover,
-        h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited
-        {
-            text-decoration: none; /* no underline */
-            color: #000000;
-            border: none;
-        }
-
-        /* Syntax Highlighting */
-
-        /* John Maddock style */
-        .keyword        { color: #3300CC; }
-        .identifier     { color: #000000; }
-        .special        { color: #707070; }
-        .preprocessor   { color: #009999; }
-        .char           { color: teal; }
-        .comment        { color: #009900; }
-        .string         { color: teal; }
-        .number         { color: teal; }
-        .white_bkd      { background-color: #E8FBE9; }
-        .dk_grey_bkd    { background-color: #A0DAAC; }
-
-        /* Matias Capeletto style 
-        .keyword        { color: #0000AA; }
-        .identifier     { color: #000000; }
-        .special        { color: #707070; }
-        .preprocessor   { color: #402080; }
-        .char           { color: teal; }
-        .comment        { color: #800000; }
-        .string         { color: teal; }
-        .number         { color: teal; }
-        .white_bkd      { background-color: #E8FBE9; }
-        .dk_grey_bkd    { background-color: #A0DAAC; }
-        */
-
-        /* Copyright, Legal Notice */
-        .copyright
-        { 
-            color: #666666; 
-            font-size: small; 
-        }
-
-        div div.legalnotice p
-        {
-            color: #666666;
-        }
-
-        /* Tables */
-
-
-        /* Misc */
-        span.highlight
-        {
-            color: #00A000;
-        }
-    }
-
-    @media print
-    {
-        /* Links */
-        a
-        {
-            color: black;
-        }
-
-        a:visited
-        {
-            color: black;
-        }
-
-        .spirit-nav
-        {
-            display: none;
-        }
-
-        /* Misc */
-        span.highlight
-        {
-            font-weight: bold;
-        }
-    }
+ @import url(style/boostbook.css);
