--- a/doc_test/box_wrapper/xhtml/style/general.css
+++ b/doc_test/box_wrapper/xhtml/style/general.css
@@ -76,8 +76,32 @@
     .copyright              { font-size: small;                color: #666666;  }
 
 
+    .titlepage
+    {
+        line-height: 0.6;
+    }
 
-    .titlepage_logo 
+    .titlepage .title
+    {
+        margin-bottom: 30px;
+    }
+
+    .titlepage .copyright
+    {
+        margin-top: 30px;
+    }
+
+    .titlepage_logo
     {
         text-align: center;
+    }
+
+    .titlepage_separator
+    {
+        margin-bottom: 30px;
+    }
+
+    .section
+    {
+        margin-bottom: 20px;
     }
